# Rag

./: .gitignore
ollama-rag-indexer/: .gitignore  README.md  pyproject.toml
ollama-rag-indexer/corpus/: README.md
ollama-rag-indexer/corpus-real/tg-agent/: .env.example
ollama-rag-indexer/corpus/articles/: chunking_evaluation.md  retrieval_architecture.md
ollama-rag-indexer/corpus/code/: sample_indexing_service.py
ollama-rag-indexer/evaluation/: queries.json  rag_control_questions.json  real_project_queries.json
ollama-rag-indexer/indexes-qwen/fixed/: chunks.jsonl  index.faiss  manifest.json  vectors.npy
ollama-rag-indexer/indexes-qwen/structural/: chunks.jsonl  index.faiss  manifest.json  vectors.npy
ollama-rag-indexer/indexes-real-qwen/fixed/: chunks.jsonl  manifest.json
ollama-rag-indexer/indexes-real-qwen/structural/: chunks.jsonl  manifest.json
ollama-rag-indexer/indexes/fixed/: index.faiss  manifest.json  vectors.npy
ollama-rag-indexer/indexes/structural/: index.faiss  manifest.json  vectors.npy
ollama-rag-indexer/reports/: chunking_comparison.json  chunking_comparison.md  qwen_chunking_comparison.json  qwen_chunking_comparison.md  real_qwen_chunking_comparison.json  real_qwen_chunking_comparison.md  real_qwen_dense_comparison.json  real_qwen_dense_comparison.md  real_qwen_hybrid_comparison.json  real_qwen_hybrid_comparison.md
ollama-rag-indexer/scripts/: create_sample_corpus.py
ollama-rag-indexer/src/rag_indexer/: __init__.py  agent.py  cli.py  (+7 more)
ollama-rag-indexer/tests/: test_agent.py  test_chunking.py  test_pipeline.py  test_retrieval.py
(+2 files in other folders)
