[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-rag-indexer"
version = "0.2.0"
description = "Local RAG indexing pipeline with Ollama embeddings and chunking comparison."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23.0",
  "requests>=2.31.0",
  "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]
pdf = [
  "reportlab>=4.0.0",
]
faiss = [
  "faiss-cpu>=1.7.4",
]
all = [
  "pytest>=7.4.0",
  "reportlab>=4.0.0",
  "faiss-cpu>=1.7.4",
]

[project.scripts]
rag-indexer = "rag_indexer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
